# swagger.yaml
@@ -37,9 +37,40 @@ paths:
             type: array
             items:
               $ref: "#/definitions/Product"
+  /login:
+    post:
+      summary: "Login via a username and password"
+      parameters:
+        - in: body
+          name: user
+          required: true
+          schema:
+            type: object
+            properties:
+              username:
+                type: string
+              password:
+                type: string
+            required:
+              - username
+              - password
+
+      responses:
+        200:
+          description: "Successfully logged in"
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+              token:
+                type: string
+        401:
+          description: "Invalid username or password"
+
   /mycart:
     get:
-      summary: "Get list items in cart"
+      summary: "Get list of items in cart"
       responses:
         200:
           description: "A list of the items in the cart"
@@ -72,3 +103,43 @@ paths:
             type: array
         404:
           description: "Product not found"
+
+    /cart/productQuantity/{id}:
+      put:
+        summary: "Updated Cart Quantity"
+        parameters:
+          - in: path
+            name: id
+            required: true
+            type: integer
+
+          - in: body
+            name: body
+            required: true
+            schema:
+              type: object
+              properties:
+                quantity:
+                  type: integer
+
+        responses:
+          200:
+            description: "Updated Cart Quantity"
+          404:
+            description: "Product not found in cart"
+
+    /cart/delete/{id}:
+      delete:
+        summary: "Delete an item from the cart"
+        parameters:
+          - in: path
+            name: id
+            required: true
+            type: integer
+
+        responses:
+          200:
+            description: "Deleted item successfully from cart"
+
+          404:
+            description: "Product not found in cart"
